[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[project]
name = "pynecone-admin"
description = "Pynecone full-stack framework CRUD boilerplate"
authors = [
    {name = "Masen Furer", email = "m_github@0x26.net"},
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 4 - Beta',
    # 'Framework :: Pynecone',
    # 'Framework :: Pynecone :: 0.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    # 'Programming Language :: Javascript',
    'Programming Language :: Python',
]
dynamic = ["version", "readme"]
dependencies = [
    'bcrypt',
    'pynecone >= 0.1.30',
    'pynecone-debounce-input >= 0.3',
    'passlib >= 1.7.4',
]

[project.urls]
Homepage = "https://github.com/trivial-intelligence/pynecone-admin"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools_scm]
